# Telos

./: .env.example  .gitignore  ARCHITECTURE.md  KNOWN_LIMITATIONS.md  LICENSE  NOTICE.md  README.md  TELOS_COMPREHENSIVE_BUILD_PROMPT.md  TELOS_DEFINITIVE_BUILD_PROMPT_v3.md  Telos.sln  azure-deploy.yaml  cloudbuild.yaml  implementation_plan.md  walkthrough.md
.github/: copilot-instructions.md
.github/prompts/: hackathon-review.prompt.md  local-run-hardening.prompt.md  readme-judge-ready.prompt.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
deploy/: Dockerfile.cloudrun  Dockerfile.orchestrator  Dockerfile.scheduler  azure-deploy.yaml  cloudrun-service.yaml  deploy-gcloud.sh  docker-compose.yml
docs/: HACKATHON_TECH_MAP.md  PENDING.md  SETUP.md  architecture.md  architecture_diagram.md  blog_post.md  devpost_submission.md
docs/demo/: HERO_DEMO.md
scripts/: start-all.ps1
services/: __init__.py
services/capture_engine/: Dockerfile  go.mod  main.go  main_test.go
services/orchestrator/: Dockerfile  __init__.py  __main__.py  app.py  config.py  mcp_server.py  models.py  requirements.txt  router.py
tests/: test_adk_navigator.py  test_app.py  test_bus.py  test_e2e_hero.py  test_egress.py  test_firestore.py  test_mcp.py  test_memory.py  test_orchestrator.py  test_privacy_filter.py  test_providers.py  test_rate_limit.py  test_scheduler.py  test_uigraph.py  test_vision.py
uigraph/rust_engine/: Cargo.toml
uigraph/rust_engine/src/: capture.rs  delta.rs  lib.rs  main.rs  models.rs  server.rs
(+54 files in other folders)
